--- a/client/server.template.ejs
+++ b/client/server.template.ejs
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <style type="text/css">
+    body,html {
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 
   <%%- meta %>
 
@@ -12,6 +18,10 @@
   <%%- link %>
 
   <%%- style %>
+
+  <style id="jss-server-side">
+    <%%- materialCss %>
+  </style>
 </head>
 <body>
   <div id="root">
